# mp-lamp

./: Makefile.am  Makefile.in  README  README.md  SConstruct  aclocal.m4  config.h.in  configure  configure.ac  local.sample.cfg
aws/: aws_installer_single.sh
main/: Makefile.am  Makefile.in  SConscript  analyze_problem.cc  csv2lcm.cc  dfs.cc  ky_lamp.cc  lamp3.cc  lcm2csv.cc  lcm_dfs.cc  lcm_dfs_lamp.cc  lcm_dfs_lamp_vba.cc  read_problem.cc  reduce_test.cc
mp-main/: Makefile.am  Makefile.in  SConscript  mp-lamp.cc  show_hostname.cc
mp-src/: Makefile.am  Makefile.in  SConscript  mp_dfs.cc  mp_dfs.h
mp-tests/: Makefile.am  Makefile.in  SConscript  mp_lamp_basic_unittest.cc  mpi_basic_unittest.cc
samples/sample_data/: sample_item4lcm.csv
scripts/: mp-lamp_plot_network.py
src/: .#timer.h  Makefile.am  Makefile.in  SConscript  database.cc  database.h  dfs.cc  dfs.h  graph.cc  graph.h  hash.h  lamp.cc  lamp.h  lamp_graph.cc  lamp_graph.h  lcm_dfs.cc  lcm_dfs.h  lcm_dfs_vba.cc  lcm_dfs_vba.h  lcm_graph.cc  lcm_graph.h  lcm_graph_vba.cc  lcm_graph_vba.h  mcts.cc  mcts.h  random.cc  random.h  sorted_itemset.cc  sorted_itemset.h  table.cc  table.h  table.h.old  table_vba.cc  table_vba.h  timer.cc  timer.h  topk.cc  topk.h  utils.cc  utils.h  (+4 more)
src/functions/: Functions4chi.cc  Functions4chi.h  Functions4fisher.cc  Functions4fisher.h  Functions4u_test.cc  Functions4u_test.h  FunctionsSuper.cc  FunctionsSuper.cc~  FunctionsSuper.h  FunctionsSuper.h~  PvalTable.cc  PvalTable.h
tests/: Makefile.am  Makefile.in  database_lcm_unittest.cc  database_reduction_unittest.cc  database_unittest.cc  dfs_unittest.cc  graph_unittest.cc  lamp_graph_unittest.cc  lamp_unittest.cc  lcm_dfs_lamp_unittest.cc  lcm_dfs_lamp_vba_unittest.cc  lcm_dfs_unittest.cc  lcm_unittest.cc  table_vba_unittest.cc  utils_unittest.cc  variable_bitset_unittest.cc  variable_length_itemset_unittest.cc
tests/gtest/: gtest-all.cc
