INCLUDES = -I$(top_srcdir)/src/ $(BOOST_CPPFLAGS) $(GFLAGS_CPPFLAGS)
LDADD = ../src/liblampsearch.a $(GFLAGS_LIBS)
bin_PROGRAMS = analyze_problem csv2lcm dfs ky_lamp lamp3 lcm2csv lcm_dfs lcm_dfs_lamp lcm_dfs_lamp_vba read_problem reduce_test

analyze_problem_SOURCES = analyze_problem.cc

csv2lcm_SOURCES = csv2lcm.cc

dfs_SOURCES = dfs.cc

ky_lamp_SOURCES = ky_lamp.cc

lamp3_SOURCES = lamp3.cc

lcm_dfs_SOURCES = lcm_dfs.cc

lcm_dfs_lamp_SOURCES = lcm_dfs_lamp.cc

lcm_dfs_lamp_vba_SOURCES = lcm_dfs_lamp_vba.cc

lcm2csv_SOURCES = lcm2csv.cc

read_problem_SOURCES = read_problem.cc

reduce_test_SOURCES = reduce_test.cc
#reduce_test_LDADD = src/liblampsearch.a
#reduce_test_LDFLAGS = 

