noinst_LIBRARIES = liblampsearch.a
liblampsearch_a_SOURCES = database.cc database.h dfs.cc dfs.h graph.cc graph.h hash.h \
                          lamp.cc lamp.h lamp_graph.cc lamp_graph.h lcm_dfs.cc lcm_dfs.h \
                          lcm_dfs_vba.cc lcm_dfs_vba.h lcm_graph.cc lcm_graph.h \
                          lcm_graph_vba.cc lcm_graph_vba.h random.cc random.h \
                          sorted_itemset.cc sorted_itemset.h table.cc table.h table_vba.cc table_vba.h \
                          timer.cc timer.h topk.cc topk.h utils.cc utils.h \
                          variable_bitset_array.cc variable_bitset_array.h \
                          variable_length_itemset.cc variable_length_itemset.h \
                          functions/PvalTable.cc functions/PvalTable.h functions/Functions4u_test.cc functions/Functions4u_test.h \
                          functions/Functions4fisher.cc functions/Functions4fisher.h functions/Functions4chi.cc functions/Functions4chi.h \
                          functions/FunctionsSuper.cc functions/FunctionsSuper.h functions/PvalTable.h
liblampsearch_a_CPPFLAGS = $(BOOST_CPPFLAGS) $(GFLAGS_CPPFLAGS)
